fixed spacing of columns and footer issues with responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ h3 {
     position: relative;
     max-width: 960px;
     margin: auto;
+    margin-bottom: 75px;
 }
 
 .navbar {
@@ -40,12 +41,26 @@ h3 {
 }
 
 .col-md-8 {
-    background-color: #ffffff;
-    margin-bottom: 75px;
+    /* background-color: #ffffff; */
+    /* margin-bottom: 75px; */
 }   
 
-.col-md-3 {
+.sectionContainer {
     background-color: #ffffff;
+    width: 90%;
+    padding: 10px;
+    margin-left: 4%; 
+}
+
+/* .col-md-3 {
+    background-color: #ffffff;
+} */
+
+.asideContainer {
+    background-color: #ffffff;
+    width: 95%;
+    padding: 10px;
+    margin-right: 4%;
 }
 
 .profile {
@@ -71,7 +86,7 @@ form {
 }
 
 .portfolioimage {
-    padding: 50px;
+    padding: 28px;
 }
 
 .portfolioname {
@@ -89,7 +104,11 @@ form {
     max-width: 65px;
     height: auto;
     padding: 10px;
-    margin-left: 5px;
+    margin: auto;
+}
+
+.icons {
+    padding-left: 35px;
 }
 
 #footer {
